--- a/views/contactos.html
+++ b/views/contactos.html
@@ -10,8 +10,11 @@
     src="https://kit.fontawesome.com/29c3be7601.js"
     crossorigin="anonymous"></script>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">  
+<body>  
+<header><div class="text-center">
+  <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
+</div>
+  <nav class="navbar navbar-expand-lg navbar-light">  
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>  
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">  
@@ -37,7 +40,8 @@
             </ul>  
         </div>  
     </div>
-</nav>  
+</nav> 
+</header> 
   <main class="container-main">
     <h1 class="">CONTACTO</h1>
     <form  class="formulario">
