--- a/views/dondeestamos.html
+++ b/views/dondeestamos.html
@@ -12,7 +12,10 @@
 
 <body>  
     <header>  
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">  
+        <div class="text-center">
+        <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
+    </div> 
+        <nav class="navbar navbar-expand-lg navbar-light">  
             <div class="container-fluid">  
                 <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>  
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">  
