--- a/views/servicios.html
+++ b/views/servicios.html
@@ -24,7 +24,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-light">  
     <div class="container-fluid">  
-      <a class="navbar-brand" href="#">SUBLI.WEB</a>   
+      <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>   
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">  
         <span class="navbar-toggler-icon"></span>  
       </button>  
@@ -48,7 +48,8 @@
         </ul>  
       </div>  
     </div>  
-  </nav>   
+  </nav>
+</header>   
 
   <main class="container mt-4">  
     <h1 class="text-center">NUESTROS SERVICIOS</h1>  
