--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   color: #000000;
   font-family: "Delius Unicase", serif;
@@ -13,12 +14,11 @@ body {
 .pacifico-regular {
   font-family: "Pacifico", cursive;
   font-weight: 400;
-  font-style: normal;
-}
-nav{
+  font-style: normal;}
 
-  background-color: rgb(192, 218, 249)} 
+nav {
 
+  background-color: rgb(192, 218, 249)}
 .container-fluid {
 
   text-align: center;
@@ -34,7 +34,7 @@ nav {
 nav ul {
   list-style: none;
   display: flex;
-  gap: 20px;/* Espacio entre los elementos del menú */
+  gap: 20px;
 }
 
 nav a {
@@ -59,11 +59,11 @@ footer {
 }
 
 footer a {
-  margin: 0 10px;/* Espacio entre iconos de redes sociales */
+  margin: 0 10px;
 }
 
 h2 {
-  margin-top: 20px;/* Espacio por encima de los títulos */
+  margin-top: 20px;/
 }
 
 /*formulario*/
@@ -74,33 +74,27 @@ h2 {
   padding: 20px;
   border: 5px solid #170c3d;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-
-
-/* Estilo del formulario */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
 .formulario {
   display: flex;
   flex-direction: column;
-  /* Coloca los elementos en columnas */
-  gap: 15px; /* Espaciado entre los elementos */
+  gap: 15px;
 }
+
 .formulario-grupo {
   display: flex;
-  flex-direction: column;  /* Coloca las etiquetas y campos de entrada en columnas */
+  flex-direction: column;
 }
 
 label {
-  margin-bottom: 5px;
-  /* Espaciado debajo de la etiqueta */
+margin-bottom: 5px;
 }
 
 
 textarea {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+border: 1px solid #ccc;
+border-radius: 4px;
 }
 
 input[type="submit"] {
@@ -111,65 +105,58 @@ input[type="submit"] {
   border-radius: 4px;
   cursor: pointer;
 }
+
 input[type="submit"]:hover {
   background-color: #0056b3;
 }
 
 /* Horarios */
 .formulario-horarios {
-  display: flex;
-  flex-direction: column;
-  /* Coloca los radio buttons en columnas */
-  gap: 5px;
-  /* Espaciado entre las opciones */
+display: flex;
+flex-direction: column;
+gap: 5px;
+}.main-servicios {
+padding: 20px;
+margin: 20px;
+border: 2px solid #000000;
+background-color: #f9f9f9;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
-/* Personaliza la clase para el main */
-.main-servicios {
-  padding: 20px;
-  /* Espacio interno */
-  margin: 20px;
-  /* Espacio externo */
-  border: 2px solid #000000;
-  /* Borde */
-  background-color: #f9f9f9;
-  /* Color de fondo */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  /* Sombra para resaltar el contenido */
-}
 
-/* Estilo para las secciones */
 .section-servicios {
   padding: 15px;
-  /* Relleno interno */
+
   margin: 10px 0;
-  /* Margen superior e inferior */
+
   border: 1px solid #0066cc;
-  /* Borde de sección */
+
   background-color: #ccd8eb;
-  /* Color de fondo */
+
 }
 
 .col-md-4 {
 
   border: 2px solid #0066cc;
   border-radius: 5px;
-  /* Esquinas redondeadas */
+
   padding: 20px;
-  /* Espacio interno de los ítems */
+
   text-align: center;
 }
+
 .grid {
   background-color: lightblue;
-  /* Color de fondo para los ítems */
+
   border: 2px 2px solid #0066cc;
-  /* Bordes en los ítems */
+
   border-radius: 5px;
-  /* Esquinas redondeadas */
+
   padding: 20px;
-  /* Espacio interno de los ítems */
+
   text-align: center;
-  /* Centra el texto en los ítems */
+
 }
 
 .carousel-item {
@@ -188,77 +175,92 @@ input[type="submit"]:hover {
 
 .card {
   transition: transform 0.2s;
-  /* Efecto de transición al pasar el ratón sobre la tarjeta */
+
 }
 
 .card:hover {
   transform: scale(1.05);
-  /* Aumenta el tamaño de la tarjeta al pasar el ratón sobre ella */
+
 }
 
 .card-img-top {
-  border-radius: 0.5rem;/* Esquinas redondeadas para las imágenes */}
-  /* Reset de estilos generales */  
-
-  .grid-container {  
-    display: grid;  
-    grid-template-columns: repeat(3, 1fr); /* 3 columnas */  
-    gap: 10px; /* Espacio entre los elementos */  
-    padding: 20px;  
-}  
-
-.grid-container img {  
-    width: 100%; /* Asegura que la imagen llene el contenedor */  
-    height: auto; /* Mantiene la proporción */  
-    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor */  
-}  
-
-/* Opcional: Si quieres que todos los contenedores tengan la misma altura */  
-.grid-item1, .grid-item2, .grid-item3, .grid-item4, .grid-item5, .grid-item6, .grid-item7 .grid-item8 {  
-    overflow: hidden; /* Oculta el contenido que sobresale */  
-    position: relative;  
-    box-shadow: 5 20px 10px rgba(0, 0, 0, 0.2); /* Sombra */  
-    transition: transform 0.3s; /* Transición suave para el efecto hover */ 
-}  
-
-.grid-item1 img, .grid-item2 img, .grid-item3 img,  
-.grid-item4 img, .grid-item5 img, .grid-item6 img, .grid-item7 img  .grid-item7 img  {  
-    width: 100%;  
-    height: 100%; /* Asegura que ocupa todo el contenedor */  
-    object-fit: cover; /* Cubre el área del contenedor sin deformar */  
-
-}  
-
-.grid-item8 {  
-  grid-column: span 2; /* Hace que el item8 ocupe dos columnas */  
-} 
-
-.logo {  
-  max-width: 150px; /* Tamaño máximo del logo */  
-}  
+  border-radius: 0.5rem;
+}
 
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding: 20px;
+}
 
-.navbar .nav-link {  
-  color: rgb(0, 0, 0) !important; /* Texto blanco para los enlaces */  
-}  
+.grid-container img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
 
-.navbar .nav-link:hover {  
-  color: #237614 !important; /* Color dorado al pasar el ratón */  
-}  
 
-.section-servicios {  
-  background-color: #c4e5f0; /* Fondo azul claro */  
-  padding: 20px;  
-  border-radius: 10px; /* Esquinas redondeadas */  
-  margin-bottom: 20px; /* Espaciado entre secciones */  
-}  
+.grid-item1,
+.grid-item2,
+.grid-item3,
+.grid-item4,
+.grid-item5,
+.grid-item6,
+.grid-item7 .grid-item8 {
+  overflow: hidden;
+  /* Oculta el contenido que sobresale */
+  position: relative;
+  box-shadow: 5 20px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s;}
 
-h1, h2 {  
-  color: #1E3A78; /* Color para los títulos */  
-}  
+  .grid-item1 img,
+  .grid-item2 img,
+  .grid-item3 img,
+  .grid-item4 img,
+  .grid-item5 img,
+  .grid-item6 img,
+  .grid-item7 img .grid-item7 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
-.podcast {  
-  text-align: center; /* Centrando la sección del podcast */  
-}  
-/* Estilo opcional para la descripción del carrusel */  
+  }
+
+  .grid-item8 {
+    grid-column: span 2;
+  }
+
+  .logo {
+    max-width: 150px;
+  }
+
+
+
+  .navbar .nav-link {
+    color: rgb(0, 0, 0);
+  }
+
+  .navbar .nav-link:hover {
+    color: #237614;
+  }
+
+  .section-servicios {
+    background-color: #c4e5f0;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
+
+  h1,
+  h2 {
+    font-family: "Sour Gummy", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 643;
+    font-style: normal;
+    font-variation-settings:"wdth" 100;
+  color: #1E3A78;
+}
+
+.podcast{ text-align: center;}
