--- a/views/productos.html
+++ b/views/productos.html
@@ -14,43 +14,44 @@
 </head>
 
 <body>
-    <div class="text-center">
-        <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">SUBLI.WEB</a> 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">INICIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./Contactos.html">CONTACTO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./Productos.html">PRODUCTOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./servicios.html">SERVICIOS</a>
-                    </li>
-                </ul>
-            </div>
+    <header>
+        <div class="text-center">
+            <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
         </div>
-    </nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contactos.html">CONTACTO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">SERVICIOS</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main class="container mt-5">
         <h1 class="text-center">Catálogo de Productos</h1>
 
         <div class="row mt-4">
-            <!-- Tarjeta 1 -->
+
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <img src="../img/taza AAA 2.webp" class="card-img-top" alt="Taza AAA">
@@ -62,7 +63,7 @@
                 </div>
             </div>
 
-            <!-- Tarjeta 2 -->
+
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <img src="../img/poly-jarrotermico1-cdb56d046912f3d3ea16630819778350-1024-1024.webp"
@@ -75,35 +76,35 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Tarjeta 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <img src="../img/botella-termica-Hoppy-de-polimero.jpg" class="card-img-top" alt="Botella Térmica">
                     <div class="card-body">
                         <h5 class="card-title">Botella Térmica 500ml</h5>
-                        <p class="card-text">Mantiene tus bebidas frías o calientes por más
-
-
-                            </section>
+                        <p class="card-text">Mantiene tus bebidas frías o calientes por más</p>
+                            <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </section>
+            
     </main>
-    <footer class="bg-light text-center py-3 mt-4">  
-        <div class="redesSociales">  
-            <a href="https://twitter.com" target="_blank" class="me-2"><i class="fa-brands fa-twitter"></i></a>  
-            <a href="https://www.twitch.tv/" target="_blank" class="me-2"><i class="fa-brands fa-twitch"></i></a>  
-            <a href="https://www.instagram.com/" target="_blank" class="me-2"><i class="fa-brands fa-instagram"></i></a>  
-            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>  
-        </div>  
-        <form class="my-3" action="">  
-            <input type="email" class="form-control mb-2" placeholder="Ingrese su email">  
-            <button type="submit" class="btn btn-primary"><img src="" alt="logo enviar" /></button>  
-        </form>  
-        <h6 class="copy">&#169; SUBLI.WEB/VL2025</h6>  
-    </footer> 
+    <footer class="bg-light text-center py-3 mt-4">
+        <div class="redesSociales">
+            <a href="https://twitter.com" target="_blank" class="me-2"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.twitch.tv/" target="_blank" class="me-2"><i class="fa-brands fa-twitch"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" class="me-2"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <form class="my-3" action="">
+            <input type="email" class="form-control mb-2" placeholder="Ingrese su email">
+            <button type="submit" class="btn btn-primary"><img src="" alt="logo enviar" /></button>
+        </form>
+        <h6 class="copy">&#169; SUBLI.WEB/VL2025</h6>
+    </footer>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
