--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,30 +14,26 @@ body {
 .pacifico-regular {
   font-family: "Pacifico", cursive;
   font-weight: 400;
-  font-style: normal;}
+  font-style: normal;
+}
 
-nav {
-
-  background-color: rgb(192, 218, 249)}
 .container-fluid {
-
   text-align: center;
 }
 
 nav {
+  background-color: rgb(192, 218, 249);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
 }
-
 nav ul {
   list-style: none;
   display: flex;
   gap: 20px;
 }
-
-nav a {
+nav ul a {
   text-decoration: none;
   color: #06090b;
 }
@@ -49,7 +45,6 @@ nav a {
 
 .lista {
   margin: 20px 0;
-  ;
 }
 
 footer {
@@ -57,47 +52,43 @@ footer {
   text-align: center;
   padding: 20px 0;
 }
-
 footer a {
   margin: 0 10px;
 }
 
 h2 {
-  margin-top: 20px;/
+  margin-top: 20px;
 }
 
-/*formulario*/
-
+/* formulario */
 .container-main {
   max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   border: 5px solid #170c3d;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .formulario {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-
-.formulario-grupo {
+.formulario .formulario-grupo {
   display: flex;
   flex-direction: column;
 }
-
-label {
-margin-bottom: 5px;
+.formulario .formulario-grupo label {
+  margin-bottom: 5px;
 }
-
-
-textarea {
+.formulario .formulario-grupo textarea {
   padding: 10px;
-border: 1px solid #ccc;
-border-radius: 4px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-input[type="submit"] {
+input[type=submit] {
   padding: 10px;
   background-color: #007bff;
   color: white;
@@ -105,58 +96,45 @@ input[type="submit"] {
   border-radius: 4px;
   cursor: pointer;
 }
-
-input[type="submit"]:hover {
+input[type=submit]:hover {
   background-color: #0056b3;
 }
 
 /* Horarios */
 .formulario-horarios {
-display: flex;
-flex-direction: column;
-gap: 5px;
-}.main-servicios {
-padding: 20px;
-margin: 20px;
-border: 2px solid #000000;
-background-color: #f9f9f9;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
+.main-servicios {
+  padding: 20px;
+  margin: 20px;
+  border: 2px solid #000000;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 .section-servicios {
   padding: 15px;
-
   margin: 10px 0;
-
   border: 1px solid #0066cc;
-
   background-color: #ccd8eb;
-
 }
 
 .col-md-4 {
-
   border: 2px solid #0066cc;
   border-radius: 5px;
-
   padding: 20px;
-
   text-align: center;
 }
 
 .grid {
   background-color: lightblue;
-
-  border: 2px 2px solid #0066cc;
-
+  border: 2px solid #0066cc;
   border-radius: 5px;
-
   padding: 20px;
-
   text-align: center;
-
 }
 
 .carousel-item {
@@ -164,29 +142,25 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 620px;
   transition: none;
   text-align: left;
-  line-height: 0px;
-  border-width: 0px;
-  margin: 0px;
-  padding: 0px;
-  letter-spacing: 0px;
+  line-height: 0;
+  border-width: 0;
+  margin: 0;
+  padding: 0;
+  letter-spacing: 0;
   font-weight: 700;
-  font-size: 0px;
+  font-size: 0;
 }
 
 .card {
   transition: transform 0.2s;
-
 }
-
 .card:hover {
   transform: scale(1.05);
-
 }
 
 .card-img-top {
   border-radius: 0.5rem;
 }
-
 
 .grid-container {
   display: grid;
@@ -194,13 +168,11 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   gap: 10px;
   padding: 20px;
 }
-
 .grid-container img {
   width: 100%;
   height: auto;
   object-fit: cover;
 }
-
 
 .grid-item1,
 .grid-item2,
@@ -208,59 +180,59 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 .grid-item4,
 .grid-item5,
 .grid-item6,
-.grid-item7 .grid-item8 {
+.grid-item7,
+.grid-item8 {
   overflow: hidden;
-  /* Oculta el contenido que sobresale */
-  position: relative;
-  box-shadow: 5 20px 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s;}
+  box-shadow: 5px 20px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s;
+}
+.grid-item1 img,
+.grid-item2 img,
+.grid-item3 img,
+.grid-item4 img,
+.grid-item5 img,
+.grid-item6 img,
+.grid-item7 img,
+.grid-item8 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  .grid-item1 img,
-  .grid-item2 img,
-  .grid-item3 img,
-  .grid-item4 img,
-  .grid-item5 img,
-  .grid-item6 img,
-  .grid-item7 img .grid-item7 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.grid-item8 {
+  grid-column: span 2;
+}
 
-  }
+.logo {
+  max-width: 150px;
+}
 
-  .grid-item8 {
-    grid-column: span 2;
-  }
+.navbar .nav-link {
+  color: rgb(0, 0, 0);
+}
+.navbar .nav-link:hover {
+  color: #237614;
+}
 
-  .logo {
-    max-width: 150px;
-  }
+.section-servicios {
+  background-color: #c4e5f0;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
 
-
-
-  .navbar .nav-link {
-    color: rgb(0, 0, 0);
-  }
-
-  .navbar .nav-link:hover {
-    color: #237614;
-  }
-
-  .section-servicios {
-    background-color: #c4e5f0;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  }
-
-  h1,
-  h2 {
-    font-family: "Sour Gummy", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 643;
-    font-style: normal;
-    font-variation-settings:"wdth" 100;
+h1,
+h2 {
+  font-family: "Sour Gummy", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 643;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   color: #1E3A78;
 }
 
-.podcast{ text-align: center;}
+.podcast {
+  text-align: center;
+}
+
+/*# sourceMappingURL=estilo.css.map */
