--- a/views/contactos.html
+++ b/views/contactos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title>SUBLI WEB</title>
     <script
     src="https://kit.fontawesome.com/29c3be7601.js"
@@ -26,13 +26,13 @@
                     <a class="nav-link" href="../index.html">INICIO</a>  
                 </li>  
                 <li class="nav-item">  
-                    <a class="nav-link" href="./Contactos.html">CONTACTO</a>  
+                    <a class="nav-link" href="./contactos.html">CONTACTO</a>  
                 </li>  
                 <li class="nav-item">  
                     <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>  
                 </li>  
                 <li class="nav-item">  
-                    <a class="nav-link" href="./Productos.html">PRODUCTOS</a>  
+                    <a class="nav-link" href="./productos.html">PRODUCTOS</a>  
                 </li>  
                 <li class="nav-item">  
                     <a class="nav-link" href="./servicios.html">SERVICIOS</a>  
@@ -43,17 +43,17 @@
 </nav> 
 </header> 
   <main class="container-main">
-    <h1 class="">CONTACTO</h1>
+    <h1>CONTACTO</h1>
     <form  class="formulario">
       <fieldset>
         <legend> <h2>Queremos conocerte!</h2></legend>
 
 
         <div class="formulario-grupo">
-          <label for="Nombres">Nombre/s</label> 
-          <input type="text" name=" Nombre" id="Nombre">
-          <label for="Apellidos"> Apellido/s</label>
-          <input type="text" name="password" id="password">
+          <label for="nombre">Nombre/s</label> 
+          <input type="text" name=" nombre" id="nombre">
+          <label for="apellido"> Apellido/s</label>
+          <input type="text" name="apellido" id="apellido">
           </div>
 
         <div class="formulario-grupo">
