--- a/views/dondeestamos.html
+++ b/views/dondeestamos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Document</title>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">   
-    <link rel="stylesheet" href="../css/style.css">  
-    <script src="https://kit.fontawesome.com/29c3be7601.js" crossorigin="anonymous"></script>  
+    <link rel="stylesheet" href="../css/estilo.css">  
+    <script src="https://kit.fontawesome.com/29c3be7601.js" crossorigin="anonymous"></script>   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" /> 
 </head>  
 
 <body>  
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>  
                         </li>  
                         <li class="nav-item">  
-                            <a class="nav-link" href="./Productos.html">PRODUCTOS</a>  
+                            <a class="nav-link" href="./productos.html">PRODUCTOS</a>  
                         </li>  
                         <li class="nav-item">  
                             <a class="nav-link" href="./servicios.html">SERVICIOS</a>  
@@ -55,7 +55,7 @@
         </section>  
     </main>  
     <p class="text-center mt-3">Síguenos en nuestras redes sociales y mantente al día con nuestras novedades y promociones.</p>  
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />  
+    
 
     <footer class="bg-light text-center py-3 mt-4">  
         <div class="redesSociales">  
