--- a/views/servicios.html
+++ b/views/servicios.html
@@ -7,7 +7,7 @@
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/estilo.css">
 
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
@@ -34,13 +34,13 @@
             <a class="nav-link" href="../index.html">INICIO</a>  
           </li>  
           <li class="nav-item">  
-            <a class="nav-link" href="./Contactos.html">CONTACTO</a>  
+            <a class="nav-link" href="./contactos.html">CONTACTO</a>  
           </li>  
           <li class="nav-item">  
             <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>  
           </li>  
           <li class="nav-item">  
-            <a class="nav-link" href="./Productos.html">PRODUCTOS</a>  
+            <a class="nav-link" href="./productos.html">PRODUCTOS</a>  
           </li>  
           <li class="nav-item">  
             <a class="nav-link active" href="./servicios.html">SERVICIOS</a>  
