--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,151 +1,7 @@
-$primary-color: #007bff;
-$primary-dark: #0056b3;
-$secondary-color: #c4e5f0;
-$foreground-color: #06090b;
-$background-color: #f9f9f9;
-$border-color: #0066cc;
-
-$font-family-default: "Delius Unicase", serif;
-$font-family-pacifico: "Pacifico", cursive;
-$font-family-title: "Sour Gummy", sans-serif;
-@mixin flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@mixin transition($property, $duration) {
-  transition: $property $duration ease-in-out;
-}
-
-@mixin respond($breakpoint) {
-  @if $breakpoint == sm {
-    @media (max-width: 576px) { @content; }
-  } @else if $breakpoint == md {
-    @media (max-width: 768px) { @content; }
-  }
-}
-%box-style {
-  border: 2px solid $border-color;
-  border-radius: 5px;
-  padding: 20px;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: $font-family-default;
-  font-weight: 700;
-  background-color: $background-color;
-  color: $foreground-color;
-}
-h1, h2 {
-  font-family: $font-family-title;
-  color: #1E3A78;
-  font-weight: 700;
-}
-
-.pacifico-regular {
-  font-family: $font-family-pacifico;
-  font-weight: 400;
-}
-.container-fluid {
-  text-align: center;
-}
-
-nav {
-  background-color: rgb(192, 218, 249);
-  @include flex-center;
-  padding: 0 20px;
-
-  ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-
-    a {
-      text-decoration: none;
-      color: $foreground-color;
-    }
-  }
-}
-
-footer {
-  background-color: #0e2134;
-  text-align: center;
-  padding: 20px 0;
-
-  a {
-    margin: 0 10px;
-  }
-}
-
-.logo {
-  max-width: 150px;
-}
-.col-md-4,
-.grid {
-  @extend %box-style;
-}
-
-.card {
-  @include transition(transform, 0.2s);
-
-  &:hover {
-    transform: scale(1.05);
-  }
-
-  .card-img-top {
-    border-radius: 0.5rem;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  padding: 20px;
-
-  @include respond(md) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include respond(sm) {
-    grid-template-columns: 1fr;
-  }
-
-  img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-
-  .grid-item8 {
-    grid-column: span 2;
-  }
-
-  .grid-item1,
-  .grid-item2,
-  .grid-item3,
-  .grid-item4,
-  .grid-item5,
-  .grid-item6,
-  .grid-item7,
-  .grid-item8 {
-    overflow: hidden;
-    box-shadow: 5px 20px 10px rgba(0, 0, 0, 0.2);
-    @include transition(transform, 0.3s);
-  }
-}
-@import 'partials/variables';
-@import 'partials/mixins';
-@import 'partials/placeholders';
-@import 'partials/base';
-@import 'partials/typography';
-@import 'partials/layout';
-@import 'partials/components';
+@use 'variables';
+@use 'mixins';
+@use 'base';
+@use 'layout';
+@use 'components';
+@use 'global';
+@use"donde";
