--- a/views/productos.html
+++ b/views/productos.html
@@ -10,13 +10,16 @@
     <link rel="stylesheet" href="../css/estilo.css">
 
     <script src="https://kit.fontawesome.com/29c3be7601.js" crossorigin="anonymous"></script>
-
+    <meta name="description" content="SUBLI.WEB - Personalización de productos como tazas, remeras y regalos únicos.">
+    <meta name="keywords" content="sublimación, los productos que ofecemos ">
+    <meta name="author" content="Laura Villar">
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div class="text-center">
-            <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
+            <img src="../img/logo.png" alt="logo" class="logo mb-3">
         </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -54,7 +57,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="../img/taza AAA 2.webp" class="card-img-top" alt="Taza AAA">
+                    <img src="../img/taza AAA.webp" class="card-img-top" alt="Taza AAA">
                     <div class="card-body">
                         <h5 class="card-title">Taza AAA</h5>
                         <p class="card-text">Tazas de cerámica importadas, perfectas para sublimar con tu diseño.</p>
@@ -66,7 +69,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="../img/poly-jarrotermico1-cdb56d046912f3d3ea16630819778350-1024-1024.webp"
+                    <img src="../img/jarro de cafe.webp"
                         class="card-img-top" alt="Jarro de Café">
                     <div class="card-body">
                         <h5 class="card-title">Jarro de Café</h5>
@@ -78,7 +81,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="../img/botella-termica-Hoppy-de-polimero.jpg" class="card-img-top" alt="Botella Térmica">
+                    <img src="../img/botella termica sin fondo.jpg" class="card-img-top" alt="Botella Térmica">
                     <div class="card-body">
                         <h5 class="card-title">Botella Térmica 500ml</h5>
                         <p class="card-text">Mantiene tus bebidas frías o calientes por más</p>
