--- a/views/dondeestamos.html
+++ b/views/dondeestamos.html
@@ -4,73 +4,73 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Document</title>  
+    <title>Dondeestamos</title>  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">   
     <link rel="stylesheet" href="../css/estilo.css">  
-    <script src="https://kit.fontawesome.com/29c3be7601.js" crossorigin="anonymous"></script>   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" /> 
+    <script src="https://kit.fontawesome.com/29c3be7601.js" crossorigin="anonymous"></script>   <meta name="description" content="SUBLI.WEB - Personalización de productos como tazas, remeras y regalos únicos.">
+    <meta name="keywords" content="sublimación, formulario ">
+    <meta name="author" content="Laura Villar">
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>  
 
-<body>  
-    <header>  
-        <div class="text-center">
-        <img src="" alt="Logo de SUBLIWEB" class="logo mb-3">
-    </div> 
-        <nav class="navbar navbar-expand-lg navbar-light">  
-            <div class="container-fluid">  
-                <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>  
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">  
-                    <span class="navbar-toggler-icon"></span>  
-                </button>  
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">  
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">  
-                        <li class="nav-item">  
-                            <a class="nav-link" href="./contactos.html">CONTACTOS</a>  
-                        </li>  
-                        <li class="nav-item">  
-                            <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>  
-                        </li>  
-                        <li class="nav-item">  
-                            <a class="nav-link" href="./productos.html">PRODUCTOS</a>  
-                        </li>  
-                        <li class="nav-item">  
-                            <a class="nav-link" href="./servicios.html">SERVICIOS</a>  
-                        </li>  
-                    </ul>  
-                </div>  
-            </div>  
-        </nav>  
-    </header>   
-
-    <main class="container mt-4">  
-        <h1 class="text-center">DONDE ESTAMOS</h1>  
-        <p class="text-center">Argentina - Corrientes - Capital</p>  
-        <h2 class="text-center">¡Visítanos y conoce más sobre nuestras ofertas! Estamos siempre dispuestos a atenderte y ayudarte a encontrar lo que necesitas. No dudes en contactarnos en caso de alguna duda o consulta.  </h2>
-        <section class="my-4">  
-            <div class="embed-responsive embed-responsive-16by9">  
-                <iframe class="embed-responsive-item"   
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56628.627502316944!2d-58.85221481323241!3d-27.491379433160766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456cc1bcd7fbf5%3A0xcb0eabffffbb8cb1!2sPlaya%20Arazaty!5e0!3m2!1ses-419!2sar!4v1739578677798!5m2!1ses-419!2sar"  
-                    style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-            </div>  
-        </section>  
-    </main>  
-    <p class="text-center mt-3">Síguenos en nuestras redes sociales y mantente al día con nuestras novedades y promociones.</p>  
-    
-
-    <footer class="bg-light text-center py-3 mt-4">  
-        <div class="redesSociales">  
-            <a href="https://twitter.com" target="_blank" class="me-2"><i class="fa-brands fa-twitter"></i></a>  
-            <a href="https://www.twitch.tv/" target="_blank" class="me-2"><i class="fa-brands fa-twitch"></i></a>  
-            <a href="https://www.instagram.com/" target="_blank" class="me-2"><i class="fa-brands fa-instagram"></i></a>  
-            <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>  
-        </div>  
-        <form class="my-3" action="">  
-            <input type="email" class="form-control mb-2" placeholder="Ingrese su email">  
-            <button type="submit" class="btn btn-primary"><img src="" alt="logo enviar" /></button>  
-        </form>  
-        <h6 class="copy">&#169; SUBLI.WEB/VL2025</h6>  
-    </footer>  
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
-</body>  
-</html>  
+<body>
+    <header class="shadow-sm">
+      <div class="text-center py-3">
+        <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light container">
+        <a class="navbar-brand text-white fw-bold" href="../index.html">SUBLI.WEB</a>
+        <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">INICIO</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="./contactos.html">CONTACTO</a></li>
+            <li class="nav-item"><a class="nav-link active text-white" href="./dondeestamos.html">DONDE ESTAMOS</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="./productos.html">PRODUCTOS</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="./servicios.html">SERVICIOS</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  
+    <main class="container py-5">
+      <h1 class="text-center mb-4 animated-entry">¿Dónde estamos?</h1>
+      <p class="text-center animated-entry">Argentina - Corrientes Capital</p>
+      <p class="text-center animated-entry">¡Visítanos y conocé más sobre nuestras ofertas! Siempre dispuestos a ayudarte a encontrar lo que necesitás. No dudes en contactarnos ante cualquier consulta.</p>
+  
+      <section class="mb-5 animated-entry">
+        <div class="ratio ratio-16x9">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56628.627502316944!2d-58.85221481323241!3d-27.491379433160766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456cc1bcd7fbf5%3A0xcb0eabffffbb8cb1!2sPlaya%20Arazaty!5e0!3m2!1ses-419!2sar!4v1739578677798!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </section>
+  
+      <p class="text-center animated-entry">Síguenos en nuestras redes sociales para estar al tanto de nuestras novedades y promociones.</p>
+    </main>
+  
+    <footer class="text-white text-center py-4 mt-5 animated-entry">
+      <div class="container">
+        <div class="mb-3">
+          <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.twitch.tv/" target="_blank" class="text-white me-3"><i class="fa-brands fa-twitch"></i></a>
+          <a href="https://www.instagram.com/" target="_blank" class="text-white me-3"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" class="text-white"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <form class="row justify-content-center mb-3">
+          <div class="col-md-4">
+            <input type="email" class="form-control" placeholder="Ingrese su email">
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-outline-light">Suscribirme</button>
+          </div>
+        </form>
+        <h6 class="mb-0">&copy; SUBLI.WEB / VL 2025</h6>
+      </div>
+    </footer>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+  
+  </html>
+  
