--- a/views/productos.html
+++ b/views/productos.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="shadow-sm py-3" style="background: linear-gradient(to right, #90caf9, #64b5f6);">
+
         <div class="text-center">
             <img src="../img/logo.png" alt="logo" class="logo mb-3">
         </div>
@@ -109,5 +110,4 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
