--- a/views/servicios.html
+++ b/views/servicios.html
@@ -20,14 +20,17 @@
 
 <body class="bg-light">
   <header class="shadow-sm py-3" style="background: linear-gradient(to right, #90caf9, #64b5f6);">
+
     <div class="text-center">
-      <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
+        <img src="../img/logo.png" alt="logo" class="logo mb-3">
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-      <a class="navbar-brand fw-bold text-white" href="../index.html">SUBLI.WEB</a>
-      <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link text-white" href="../index.html">INICIO</a></li>
