--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $color-primario: #007bff;
 $color-secundario: #6ec1e4;
-$color-fondo: #f0faff;
+$color-fondo: #b4cdda;
 $color-texto: #0d1b2a;
 $fuente-principal: 'Nunito', sans-serif;
