--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,13 +3,9 @@
 
 header {
   background: linear-gradient(135deg, $color-primario, $color-secundario);
-  color: white;
+  color: rgb(228, 211, 211);
   padding: 2rem 0;
 }
 
-footer {
-  background-color: $color-primario;
-  color: white;
-  padding: 2rem 0;
-  text-align: center;
-}
+
+
