--- a/views/contactos.html
+++ b/views/contactos.html
@@ -15,37 +15,29 @@
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 <body>  
-<header><div class="text-center">
-  <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-3">
-</div>
-  <nav class="navbar navbar-expand-lg navbar-light">  
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>  
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">  
-            <span class="navbar-toggler-icon"></span>  
-        </button>  
-        <div class="collapse navbar-collapse" id="navbarNav">  
-            <ul class="navbar-nav">  
-                <li class="nav-item">  
-                    <a class="nav-link" href="../index.html">INICIO</a>  
-                </li>  
-                <li class="nav-item">  
-                    <a class="nav-link" href="./contactos.html">CONTACTO</a>  
-                </li>  
-                <li class="nav-item">  
-                    <a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a>  
-                </li>  
-                <li class="nav-item">  
-                    <a class="nav-link" href="./productos.html">PRODUCTOS</a>  
-                </li>  
-                <li class="nav-item">  
-                    <a class="nav-link" href="./servicios.html">SERVICIOS</a>  
-                </li>  
-            </ul>  
-        </div>  
+  <header>
+    <div class="navbar navbar-expand-lg navbar-light container">
+      <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
     </div>
-</nav> 
-</header> 
+    
+      
+        <nav class="navbar navbar-expand-lg navbar-light container">
+          <a class="navbar-brand text-white fw-bold" href="../index.html">SUBLI.WEB</a>
+          <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
+              <li class="nav-item"><a class="nav-link " href="./contactos.html">CONTACTO</a></li>
+              <li class="nav-item"><a class="nav-link  " href="./dondeestamos.html">DONDE ESTAMOS</a></li>
+              <li class="nav-item"><a class="nav-link " href="./productos.html">PRODUCTOS</a></li>
+              <li class="nav-item"><a class="nav-link " href="./servicios.html">SERVICIOS</a></li>
+            </ul>
+          </div>
+        </nav>
+  </header>
+  
 <main class="container my-5 animate-fade-up">
   <h1 class="text-center mb-4">CONTACTO</h1>
   <form class="p-4 bg-white rounded shadow border border-primary-subtle">
@@ -65,7 +57,7 @@
 
       <div class="mb-3">
         <label for="email" class="form-label">Mail</label>
-        <input type="email" class="form-control border-primary" id="email" name="email" placeholder="correo@correo.com" required>
+        <input type="email" class="form-control border-primary" id="email" name="email" placeholder="@gmil.com" required>
       </div>
 
       <div class="mb-3">
@@ -108,20 +100,25 @@
 
   </form>
 </main>
-
-  <footer class="bg-light text-center py-3 mt-4">  
-    <div class="redesSociales">  
-        <a href="https://twitter.com" target="_blank" class="me-2"><i class="fa-brands fa-twitter"></i></a>  
-        <a href="https://www.twitch.tv/" target="_blank" class="me-2"><i class="fa-brands fa-twitch"></i></a>  
-        <a href="https://www.instagram.com/" target="_blank" class="me-2"><i class="fa-brands fa-instagram"></i></a>  
-        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>  
-    </div>  
-    <form class="my-3" action="">  
-        <input type="email" class="form-control mb-2" placeholder="Ingrese su email">  
-        <button type="submit" class="btn btn-primary"><img src="" alt="logo enviar" /></button>  
-    </form>  
-    <h6 class="copy">&#169; SUBLI.WEB/VL2025</h6>  
-</footer> 
+<footer class="text-white text-center py-4 mt-5 animated-entry">
+  <div class="container">
+    <div class="mb-3">
+      <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.twitch.tv/" target="_blank" class="text-white me-3"><i class="fa-brands fa-twitch"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" class="text-white me-3"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" class="text-white"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+    <form class="row g-3">
+      <div class="col-12 col-md-6 mx-auto">
+        <input type="email" class="form-control" placeholder="Ingrese su email" required>
+      </div>
+      <div class="col-12 text-center">
+        <button type="submit" class="btn btn-outline-light">ENVIAR</button>
+      </div>
+    </form>
+    <h6 class="mb-0 text-center mt-4">&copy; SUBLI.WEB / VL 2025</h6>
+  </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
 </body>
 </html>
