--- a/views/dondeestamos.html
+++ b/views/dondeestamos.html
@@ -25,11 +25,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link text-white" href="../index.html">INICIO</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./contactos.html">CONTACTO</a></li>
-            <li class="nav-item"><a class="nav-link active text-white" href="./dondeestamos.html">DONDE ESTAMOS</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./productos.html">PRODUCTOS</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="./servicios.html">SERVICIOS</a></li>
+            <li class="nav-item"><a class="nav-link " href="../index.html">INICIO</a></li>
+            <li class="nav-item"><a class="nav-link " href="./contactos.html">CONTACTO</a></li>
+            <li class="nav-item"><a class="nav-link" href="./dondeestamos.html">DONDE ESTAMOS</a></li>
+            <li class="nav-item"><a class="nav-link" href="./productos.html">PRODUCTOS</a></li>
+            <li class="nav-item"><a class="nav-link " href="./servicios.html">SERVICIOS</a></li>
           </ul>
         </div>
       </nav>
@@ -48,7 +48,6 @@
   
       <p class="text-center animated-entry">Síguenos en nuestras redes sociales para estar al tanto de nuestras novedades y promociones.</p>
     </main>
-  
     <footer class="text-white text-center py-4 mt-5 animated-entry">
       <div class="container">
         <div class="mb-3">
@@ -57,15 +56,15 @@
           <a href="https://www.instagram.com/" target="_blank" class="text-white me-3"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" class="text-white"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
-        <form class="row justify-content-center mb-3">
-          <div class="col-md-4">
-            <input type="email" class="form-control" placeholder="Ingrese su email">
+        <form class="row g-3">
+          <div class="col-12 col-md-6 mx-auto">
+            <input type="email" class="form-control" placeholder="Ingrese su email" required>
           </div>
-          <div class="col-auto">
-            <button type="submit" class="btn btn-outline-light">Suscribirme</button>
+          <div class="col-12 text-center">
+            <button type="submit" class="btn btn-outline-light">ENVIAR</button>
           </div>
         </form>
-        <h6 class="mb-0">&copy; SUBLI.WEB / VL 2025</h6>
+        <h6 class="mb-0 text-center mt-4">&copy; SUBLI.WEB / VL 2025</h6>
       </div>
     </footer>
   
