--- a/views/servicios.html
+++ b/views/servicios.html
@@ -18,30 +18,29 @@
 
 </head>
 
-<body class="bg-light">
-  <header class="shadow-sm py-3" style="background: linear-gradient(to right, #90caf9, #64b5f6);">
-
-    <div class="text-center">
-        <img src="../img/logo.png" alt="logo" class="logo mb-3">
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">SUBLI.WEB</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link text-white" href="../index.html">INICIO</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="./contactos.html">CONTACTO</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="./dondeestamos.html">DONDE ESTAMOS</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="./productos.html">PRODUCTOS</a></li>
-          <li class="nav-item"><a class="nav-link active text-white" href="./servicios.html">SERVICIOS</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+<body >
+  <header>
+  <div class="navbar navbar-expand-lg navbar-light container">
+    <img src="../img/logo.png" alt="Logo de SUBLIWEB" class="logo mb-2">
+  </div>
+  
+    
+      <nav class="navbar navbar-expand-lg navbar-light container">
+        <a class="navbar-brand text-white fw-bold" href="../index.html">SUBLI.WEB</a>
+        <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
+            <li class="nav-item"><a class="nav-link " href="./contactos.html">CONTACTO</a></li>
+            <li class="nav-item"><a class="nav-link " href="./dondeestamos.html">DONDE ESTAMOS</a></li>
+            <li class="nav-item"><a class="nav-link " href="./productos.html">PRODUCTOS</a></li>
+            <li class="nav-item"><a class="nav-link " href="./servicios.html">SERVICIOS</a></li>
+          </ul>
+        </div>
+      </nav>
+</header>
 
   <main class="container py-5">
     <h1 class="text-center mb-4">Nuestros Servicios</h1>
@@ -67,7 +66,7 @@
     </section>
   </main>
 
-  <footer class="text-white text-center py-4 mt-5" style="background: linear-gradient(to right, #0d47a1, #1976d2);">
+  <footer class="text-white text-center py-4 mt-5 animated-entry">
     <div class="container">
       <div class="mb-3">
         <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="fa-brands fa-twitter"></i></a>
@@ -75,17 +74,16 @@
         <a href="https://www.instagram.com/" target="_blank" class="text-white me-3"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" class="text-white"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
-      <form class="row justify-content-center mb-3">
-        <div class="col-md-4">
-          <input type="email" class="form-control" placeholder="Ingrese su email">
+      <form class="row g-3">
+        <div class="col-12 col-md-6 mx-auto">
+          <input type="email" class="form-control" placeholder="Ingrese su email" required>
         </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-outline-light">Suscribirme</button>
+        <div class="col-12 text-center">
+          <button type="submit" class="btn btn-outline-light">ENVIAR</button>
         </div>
       </form>
-      <h6 class="mb-0">&copy; SUBLI.WEB / VL 2025</h6>
+      <h6 class="mb-0 text-center mt-4">&copy; SUBLI.WEB / VL 2025</h6>
     </div>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
