--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@ $color-secundario: #6ec1e4;
 $color-fondo: #ffffff;
 $color-texto: #000000;
 $fuente-principal: 'Nunito', sans-serif;
-$fuente-titulos: 'Neonderthaw', cursive;
+$fuente-titulos: 'Nunito', sans-serif;
 h1, h2, h3, h4, h5 {
     font-family: $fuente-titulos;
     font-optical-sizing: auto;
